[gd_scene load_steps=2 format=3 uid="uid://stash_panel001"]

[ext_resource type="Script" path="res://scripts/ui/stash_panel.gd" id="1"]

[node name="StashPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
visible = false
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.08, 0.98)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "STASH"
horizontal_alignment = 1

[node name="EquipmentPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0

[node name="EquipmentTitle" type="Label" parent="EquipmentPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "Equipment"
horizontal_alignment = 1

[node name="FirstSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="EquipmentPanel/FirstSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Primary"
horizontal_alignment = 1

[node name="SecondSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 110.0
offset_top = 50.0
offset_right = 180.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="EquipmentPanel/SecondSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Secondary"
horizontal_alignment = 1

[node name="PistolSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 200.0
offset_top = 50.0
offset_right = 270.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="EquipmentPanel/PistolSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Pistol"
horizontal_alignment = 1

[node name="HeadSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 110.0
offset_top = 160.0
offset_right = 180.0
offset_bottom = 230.0

[node name="Label" type="Label" parent="EquipmentPanel/HeadSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Head"
horizontal_alignment = 1

[node name="FaceSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 200.0
offset_top = 160.0
offset_right = 270.0
offset_bottom = 230.0

[node name="Label" type="Label" parent="EquipmentPanel/FaceSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Face"
horizontal_alignment = 1

[node name="BackpackSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 160.0
offset_right = 90.0
offset_bottom = 230.0

[node name="Label" type="Label" parent="EquipmentPanel/BackpackSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Backpack"
horizontal_alignment = 1

[node name="BodySlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 110.0
offset_top = 270.0
offset_right = 180.0
offset_bottom = 340.0

[node name="Label" type="Label" parent="EquipmentPanel/BodySlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Body"
horizontal_alignment = 1

[node name="PantsSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 110.0
offset_top = 380.0
offset_right = 180.0
offset_bottom = 450.0

[node name="Label" type="Label" parent="EquipmentPanel/PantsSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Pants"
horizontal_alignment = 1

[node name="BootsSlot" type="Panel" parent="EquipmentPanel"]
layout_mode = 1
offset_left = 200.0
offset_top = 380.0
offset_right = 270.0
offset_bottom = 450.0

[node name="Label" type="Label" parent="EquipmentPanel/BootsSlot"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 5.0
offset_bottom = 25.0
theme_override_font_sizes/font_size = 10
text = "Boots"
horizontal_alignment = 1

[node name="StatsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 370.0
offset_top = -250.0
offset_right = 620.0
offset_bottom = 250.0

[node name="PlayerName" type="Label" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 20
text = "Player Name"
horizontal_alignment = 1

[node name="Rank" type="Label" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 14
text = "Novice"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="StatsPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 80.0
offset_right = 230.0
offset_bottom = 105.0
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="StatsPanel/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 12
text = "Health"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StaminaBar" type="ProgressBar" parent="StatsPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 115.0
offset_right = 230.0
offset_bottom = 140.0
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="StatsPanel/StaminaBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 12
text = "Stamina"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stats" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 1
offset_left = 20.0
offset_top = 160.0
offset_right = 230.0
offset_bottom = 480.0
theme_override_constants/separation = 3

[node name="BulletproofHead" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Bulletproof (Head): 0.0%"

[node name="BulletproofBody" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Bulletproof (Body): 0.0%"

[node name="PenetrationHead" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Penetration (Head): 0.0%"

[node name="PenetrationBody" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Penetration (Body): 0.0%"

[node name="BleedingResist" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Bleeding Resist: 0.0%"

[node name="ExplosionResist" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Explosion Resist: 0.0%"

[node name="FireResist" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Fire Resist: 0.0%"

[node name="ColdResist" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Cold Resist: 0.0%"

[node name="ShockResist" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Shock Resist: 0.0%"

[node name="ChemicalResist" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Chemical Resist: 0.0%"

[node name="RadiationResist" type="Label" parent="StatsPanel/Stats"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Radiation Resist: 0.0%"

[node name="InventoryPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -250.0
offset_right = -50.0
offset_bottom = 250.0

[node name="InventoryTitle" type="Label" parent="InventoryPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 18
text = "Inventory"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryPanel"]
layout_mode = 1
offset_left = 10.0
offset_top = 50.0
offset_right = 490.0
offset_bottom = 480.0

[node name="InventoryGrid" type="GridContainer" parent="InventoryPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 8
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4

[node name="BottomBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0

[node name="MoneyLabel" type="Label" parent="BottomBar"]
layout_mode = 1
offset_left = 50.0
offset_top = 15.0
offset_right = 250.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 16
text = "Money: 0"

[node name="WeightLabel" type="Label" parent="BottomBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.0
offset_right = 150.0
offset_bottom = 15.0
theme_override_font_sizes/font_size = 14
text = "Weight: 0.0/44.7 (0%)"
horizontal_alignment = 1

[node name="SortButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 10.0
offset_right = -310.0
offset_bottom = 50.0
text = "Sort"

[node name="UseButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 10.0
offset_right = -210.0
offset_bottom = 50.0
text = "Use"

[node name="DropButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_right = -110.0
offset_bottom = 50.0
text = "Drop"

[node name="CloseButton" type="Button" parent="BottomBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
text = "Close"

[node name="CraftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 80.0
offset_right = -50.0
offset_bottom = 150.0

[node name="PointsLabel" type="Label" parent="CraftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 16
text = "Craft Points: 500/0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemTooltip" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_left = 400.0
offset_top = 300.0
offset_right = 650.0
offset_bottom = 500.0

[node name="VBox" type="VBoxContainer" parent="ItemTooltip"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Name" type="Label" parent="ItemTooltip/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Item Name"

[node name="Description" type="Label" parent="ItemTooltip/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Item description goes here"
autowrap_mode = 2

[node name="Stats" type="Label" parent="ItemTooltip/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Stats"
